--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
-    {
-    "version": 2,
-    "builds": [
-        {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "dist" }
-        }
-    ],
-    "routes": [
+{
+  "version": 2,
+  "projects": {
+    "frontend": {
+      "root": "frontend",
+      "builds": [
+        { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+      ],
+      "routes": [
         { "src": "/(.*)", "dest": "/index.html" }
-    ]
+      ]
     }
+  }
+}
